--- a/package.json
+++ b/package.json
@@ -1,8 +1,37 @@
 {
+  "name": "backend-revision",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
+    "lint": "eslint . --ext .js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neelesh1097/Backend-revision.git"
+  },
+  "bugs": {
+    "url": "https://github.com/neelesh1097/Backend-revision/issues"
+  },
+  "homepage": "https://github.com/neelesh1097/Backend-revision#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.19.4",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "eslint": "^9.13.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.12.0",
+    "eslint-plugin-promise": "^7.1.0"
   }
 }
