--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/neelesh1097/Backend-revision#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.19.4",
     "nodemon": "^3.1.11"
