--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.19.4",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   },
   "devDependencies": {
