--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/neelesh1097/Backend-revision#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
@@ -30,10 +31,10 @@
     "nodemon": "^3.1.11"
   },
   "devDependencies": {
-    "eslint": "^9.13.0",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.12.0",
-    "eslint-plugin-promise": "^7.1.0"
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0"
   }
 }
